<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->

<!--        the use of linear layout was used here because a login page usually only uses a linear layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA939D"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:ems="10"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#263238" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#263238" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#E15793"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#E15793"
                android:text="@string/register_button" />

        </LinearLayout>
    </FrameLayout>
</layout>